--- a/src/lib/styles/menu/_menu1.scss
+++ b/src/lib/styles/menu/_menu1.scss
@@ -2,11 +2,13 @@
 	display: none;
 	&--is-visible {
 		display: block;
+		padding-top: 20px;
 	}
 }
 
 .item {
 	margin-bottom: 50px;
+	scroll-margin-top: 180px;
 	@include media-breakpoint-down(sm) {
 		border-top: 1px solid $beige;
 		padding: 30px;
@@ -40,6 +42,11 @@
 	justify-content: center;
 	flex-wrap: wrap;
 	margin-bottom: 35px;
+	position: sticky;
+	top: 70px;
+	background-color: #fff;
+	z-index: 100;
+	padding: 20px 0;
 	@media (min-width: 768px) {
 		margin-bottom: 60px;
 	}
